array.island.Island.scala.code
def island(num:Array[Int]): Int = {var b:Int = 0; var a:Int = num.size; 
                                   for (i<- 0 to a-1) 
                                   {if (num(i)!=0)&&(num(i)-num(i-1)>0) 
                                     {b = b +1}
                                   }; return b
}